--- a/predi.ipynb
+++ b/predi.ipynb
@@ -45,8 +45,8 @@
       "outputs": [],
       "source": [
         "'''Importo la data'''\n",
-        "train = pd.read_csv('/content/drive/MyDrive/Henry_Python/hackaton/Housing Dreams/house_train_raw.csv')\n",
-        "test = pd.read_csv('/content/drive/MyDrive/Henry_Python/hackaton/Housing Dreams/houses_test_raw.csv')"
+        "train = pd.read_csv('house_train_raw.csv')\n",
+        "test = pd.read_csv('houses_test_raw.csv')"
       ]
     },
     {
